# src/main.ts
@@ -1,9 +1,12 @@
 import express from 'express';
+import session from 'express-session';
 import cors from 'cors';
+import cookieParser from 'cookie-parser';
 import dependencyContainer from './dependencyInjection/dependency.container';
 import config from './app.config';
 import AppModule from './app.module';
 import AppRouter from './app.routes';
+import AuthRouter from './auth/auth.routes';
 import UserRouter from './domain/user/user.routes';
 import PostRouter from './domain/post/post.routes';
 import setupSwagger from './swagger/swagger.config';
@@ -20,12 +23,25 @@ async function bootstrap() {
   process.env.CUR_URL = process.env.NODE_ENV === 'development' ?
     `${process.env.URL_DEV}:${port}` : process.env.URL_PROD;
 
+  app.use(session({
+    secret: process.env.SECRET!,
+    resave: false,
+    saveUninitialized: true,
+    cookie: {
+      httpOnly: true,
+      secure: false,
+      sameSite: 'lax',
+      maxAge: 7200000
+    }
+  }));
   app.use(cors({
     origin: '*',
     optionsSuccessStatus: 200
   }));
+  app.use(cookieParser());
   app.use(express.json());
   app.use('/', dependencyContainer.getInstance<AppRouter>('appRouter').getAppRouter());
+  app.use('/auth', dependencyContainer.getInstance<AuthRouter>('authRouter').getAuthRouter());
   app.use('/api/users', dependencyContainer.getInstance<UserRouter>('userRouter').getUserRouter());
   app.use('/api/posts', dependencyContainer.getInstance<PostRouter>('postRouter').getPostRouter());
 
